# Medgemma-challenge

./: .gitignore  README.md  pyproject.toml
EchoNet-MIMIC_VQA/: 0_convert_Dicom_to_AVI_save.py  MIMIC_Echo_1qa_SDE_vFINAL_share_d20260210_111554.csv  MIMIC_Echo_4qa_BPO_vFINAL_share_d20260213_181852.csv  README.md
diagnostic-test/: medgemma_diagnostic.py
scripts/: download.py  inference_example.py
vqa-test/: medgemma_qa.py  medgemma_qa.sh  mimic_vqa_sample.json
