[project]
name = "echogemma"
version = "0.1.0"
description = "Multimodal echocardiography report generation from DICOM studies"
requires-python = ">=3.10"
dependencies = [
    "torch==2.10.0",
    "torchvision==0.25.0",
    "transformers==5.2.0",
    "peft==0.18.1",
    "pydicom==3.0.1",
    "opencv-python==4.13.0.92",
    "numpy==2.2.6",
    "tqdm==4.67.3",
    "matplotlib==3.10.8",
]
